--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,5 +4,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . ./
-RUN npm run build
-CMD cp -r build result_build
+
+CMD ["npm", "start"]
+# RUN npm run build
+# CMD cp -r build result_build
