--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,29 @@
-version: '3.3'
+version: '3.8'
 services:
-
+  db:
+      image: postgres:latest
+      volumes:
+        - pgdata:/var/lib/postgresql/data/
+      env_file:
+        - ./.env
+  web:
+    image: fedek/foodgram_backend:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+      - ../data:/app/data/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: fedek/foodgram_frontend:latest
+    restart: always
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - web
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +32,11 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - frontend
+volumes:
+  static_value:
+  media_value:
+  pgdata:
