--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+    server_name 51.250.102.154;
+    server_tokens off;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -7,15 +10,35 @@ server {
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri /index.html;
+        try_files $uri/ index.html;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
-
+    }
+    location /api/ {
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+    }
+    location /admin/ {
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+    }
+    location /static/admin/ {
+        root /var/html/;
+    }
+    location /static/rest_framework/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+      root   /var/html/frontend/;
+    }
 }
