--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -18,6 +18,9 @@ services:
     env_file:
       - ./.env
   frontend:
+    # build:
+    #   context: ../frontend
+    #   dockerfile: Dockerfile
     image: fedek/foodgram_frontend:latest
     restart: always
     volumes:
