--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -27,10 +27,9 @@ jobs:
 
     - name: Test with flake8 and django tests
       run: |
+        cd backend
         python -m flake8
         python -m pytest tests
-      with:
-        context: ./backend/foodgram
         
 #   build_and_push_to_docker_hub:
 #     name: Push Docker image to Docker Hub
