--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -29,31 +29,56 @@ jobs:
         python -m flake8
         python -m pytest tests
         
-#   build_and_push_to_docker_hub:
-#     name: Push Docker image to Docker Hub
-#     runs-on: ubuntu-latest
-#     needs: tests
-#     steps:
-#     - name: Check out the repo
-#       # Проверка доступности репозитория Docker Hub для workflow
-#       uses: actions/checkout@v2
-#     - name: Set up Docker Buildx
-#       # Вызов сборщика контейнеров docker
-#       uses: docker/setup-buildx-action@v1
-#     - name: Login to Docker
-#       # Запуск скрипта авторизации на Docker Hub
-#       uses: docker/login-action@v1
-#       with:
-#         username: ${{ secrets.DOCKER_USERNAME }}
-#         password: ${{ secrets.DOCKER_PASSWORD }}
-#     - name: Push to Docker Hub
-#       # Пуш образа в Docker Hub 
-#       uses: docker/build-push-action@v2
-#       with:
-#         context: ./api_yamdb/
-#         push: true
-#         tags: fedek/api_yamdb:latest
-  
+  build_backend_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+    - name: Check out the repo
+      # Проверка доступности репозитория Docker Hub для workflow
+      uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      # Вызов сборщика контейнеров docker
+      uses: docker/setup-buildx-action@v1
+    - name: Login to Docker
+      # Запуск скрипта авторизации на Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push to Docker Hub
+      # Пуш образа в Docker Hub 
+      uses: docker/build-push-action@v2
+      with:
+        context: ./backend/foodgram/
+        push: true
+        tags: fedek/foodgram_backend:latest
+
+build_frontend_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+    - name: Check out the repo
+      # Проверка доступности репозитория Docker Hub для workflow
+      uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      # Вызов сборщика контейнеров docker
+      uses: docker/setup-buildx-action@v1
+    - name: Login to Docker
+      # Запуск скрипта авторизации на Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push to Docker Hub
+      # Пуш образа в Docker Hub 
+      uses: docker/build-push-action@v2
+      with:
+        context: ./backend/frontend/
+        push: true
+        tags: fedek/foodgram_frontend:latest
+
 #   deploy:
 #     runs-on: ubuntu-latest
 #     needs: build_and_push_to_docker_hub
