--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,6 @@ exclude =
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:E501, I001, I004, I003
     *:I001, I005, I004
 max-complexity = 10
