--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -29,7 +29,7 @@ jobs:
         python -m flake8
         
   build_backend_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+    name: Push Backend Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -54,7 +54,7 @@ jobs:
         tags: fedek/foodgram_backend:latest
 
   build_frontend_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+    name: Push Frontend Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -74,7 +74,7 @@ jobs:
       # Пуш образа в Docker Hub 
       uses: docker/build-push-action@v2
       with:
-        context: ./backend/frontend/
+        context: ./frontend/
         push: true
         tags: fedek/foodgram_frontend:latest
 
